messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
  labels:
    app: django
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      version: blue
  template:
    metadata:
      labels:
        app: django
        version: blue
    spec:
      containers:
      - name: django-container
        image: messaging:2.0  # Replace with actual image
        ports:
        - containerPort: 8000
